attempt to fix vertical scroll on mobile

--- a/src/public/assets/stylesheets/index.css
+++ b/src/public/assets/stylesheets/index.css
@@ -18,7 +18,7 @@ body {
   display: flex;
   flex-direction: column;
   font-family: 'Epilogue', sans-serif;   
-  min-height: 100vh;
+  min-height: 100dvh;
   background-image: url('../images/stars.jpg');
   background-repeat:repeat;
   background-size:cover;
@@ -53,7 +53,7 @@ main {
   display: flex;
   flex-direction: column;
   min-height: 95vh;
-  max-height: 95vh;
+  max-height: 95dvh;
   padding: 20px;
   padding-bottom: 0px;
   /* justify-items: center; */
